fixed spacing

--- a/src/App.css
+++ b/src/App.css
@@ -45,7 +45,7 @@ body {
   border: 3px solid #15418c;
   border-radius: 10px;
   font-size: 1rem;
-  margin-bottom: 15px;
+  margin-bottom: 10px;
 }
 
 .year-range {
